<resources>
    <string name="app_name">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_setting">Setting</string>
    <string name="default_zip_code">22202</string>
    <string name="default_num_days">3</string>
    <string name="zip_code_text">zip code:</string>
    <string name="num_days_text">number of days to display: </string>
    <string name="switch_on_text_cel">celsius</string>
    <string name="switch_off_text_fah">fahrenheit</string>
    <string name="switch_on_text_network">network location</string>
    <string name="switch_off_text_zip">zip code</string>
    <string name="list_low_temp">low temp</string>
    <string name="list_high_temp">high temp</string>
    <string name="list_description">description</string>
    <string name="list_location">location</string>
    <string name="list_date">date</string>
    <string name="find_location">Finding Location</string>
    <string name="download_weather_data">Downloading Weather Data</string>
    <string name="invalid_zipcode">zip code must be integer, otherwise will set to default</string>
    <string name="zipcode_out_of_bound">zip code should be 4 or 5 digits, otherwise will set to default</string>
    <string name="no_json_get">fail to get json data, make sure you are online</string>
    <string name="wrong_json_get">the json did not contain weather data, please check the zip code is correct</string>
</resources>
