<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.jackson.weather.activity.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zip_code_text"/>

        <EditText
            android:id="@+id/zip_code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_zip_code"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>
    </LinearLayout>

    <Switch
        android:id="@+id/celsius_fahrenheit_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/switch_off_text_fah"
        android:textOn="@string/switch_on_text_cel"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_days_text"/>

        <TextView
            android:id="@+id/number_of_days_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_num_days"/>
    </LinearLayout>

    <NumberPicker
        android:id="@+id/number_of_days_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>


</LinearLayout>
